client create view added

--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -8,13 +8,13 @@
     <h1>Hello there. Choose your action.</h1>
     <ul>
         <li><a href="/add_client/">Add Client</a> </li>
-        <li><a href="#">Add Broker</a> </li>
-        <li><a href="#">Add Bank</a> </li>
-        <li><a href="#">Add Successful Loan</a> </li>
-        <li><a href="#">Show Clients List</a> </li>
-        <li><a href="#">Show Broker List</a> </li>
-        <li><a href="#">Show Bank List</a> </li>
-        <li><a href="#">Show Successful Loan list</a> </li>
+        <li><a href="/add_broker/">Add Broker</a> </li>
+        <li><a href="/add_bank/">Add Bank</a> </li>
+        <li><a href="/add_loan/">Add Successful Loan</a> </li>
+        <li><a href="/all_clients/">Show Clients List</a> </li>
+        <li><a href="/all_brokers/">Show Broker List</a> </li>
+        <li><a href="/all_banks/">Show Bank List</a> </li>
+        <li><a href="/all_loans/">Show Successful Loan list</a> </li>
     </ul>
 </body>
 </html>
