banks list added

--- a/loan_helper/templates/loan_helper/broker_list.html
+++ b/loan_helper/templates/loan_helper/broker_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Brokers</title>
+    <title>Broker List</title>
 </head>
 <body>
 <h1>Brokers</h1>
