change income added

--- a/loan_helper/templates/client_details.html
+++ b/loan_helper/templates/client_details.html
@@ -46,6 +46,7 @@
     <td>{{ client.date_created }}</td>
     <td>
         <a href="/client_update/{{ client.id }}"> <input type="button" value="Update client"></a><br>
+        <a href="/income/{{ client.id }}"> <input type="button" value="Change income"></a><br>
     </td>
   </tr>
 </table><br><br>
