--- a/loan_helper/templates/income.html
+++ b/loan_helper/templates/income.html
@@ -29,6 +29,7 @@
         <option value="1">Employment contract</option>
         <option value="2">Mandate contract</option>
         <option value="3">Small business</option>
+        <option value="4">Pension</option>
     </select><br>
     Monthly income: <input name="income" type="number"><br>
     <input type="submit" value="Add" name="add">
