some edits in loans view, also added new records in app.py

--- a/loan_helper/templates/loan_helper/successfulloan_list.html
+++ b/loan_helper/templates/loan_helper/successfulloan_list.html
@@ -11,9 +11,15 @@
   <tr>
     <th>Client</th>
     <th>Bank</th>
-    <th>Loan Amount</th>
+    <th>Loan Amount Gross [zł]</th>
+    <th>Loan Amount Net [zł]</th>
+    <th>Bank Charge [%]</th>
+    <th>Interest rate [%]</th>
+    <th>Bank insurance [zł]</th>
+    <th>Repayment term [months]</th>
+    <th>Instalment amount [zł]</th>
     <th>Date</th>
-    <th>Details</th>
+
 
   </tr>
        {% for loan in object_list %}
@@ -21,12 +27,18 @@
 
     <td>{{ loan.client }}</td>
     <td>{{ loan.bank }}</td>
-    <td>{{ loan.loan_amount }}</td>
+    <td>{{ loan.loan_amount_gross }}</td>
+    <td>{{ loan.loan_amount_net }}</td>
+    <td>{{ loan.bank_charge }}</td>
+    <td>{{ loan.interest_rate }}</td>
+    <td>{{ loan.bank_insurance }}</td>
+    <td>{{ loan.repayment_term }}</td>
+    <td>{{ loan.instalment_amount }}</td>
     <td>{{ loan.date_created }}</td>
-    <td><a href="/broker_details/{{ broker.id }}"> <input type="button" value="Click"></a></td>
+
   </tr>
      {% empty %}
-    <li>No brokers yet.</li>
+    <li>No loans yet.</li>
 {% endfor %}
 </table><br><br>
 </body>
