--- a/loan_helper/templates/loan_helper/client_list.html
+++ b/loan_helper/templates/loan_helper/client_list.html
@@ -7,9 +7,9 @@
 <body>
 <h1>Clients</h1>
 
-<p>Order by</p>
 <form action="" method="GET">
 <select name="order">
+    <option name="">-----</option>
     <option name="first_name">First Name</option>
     <option name="last_name">Last Name</option>
     <option name="date_created">Date Created</option>
