--- a/loan_helper/templates/loan_helper/successfulloan_list.html
+++ b/loan_helper/templates/loan_helper/successfulloan_list.html
@@ -6,6 +6,23 @@
 </head>
 <body>
 <h1>Successful Loans</h1>
+
+<form action="" method="GET">
+<select name="order">
+    <option name="">-----</option>
+    <option name="client">Client</option>
+    <option name="bank">Bank</option>
+    <option name="newest">Newest</option>
+    <option name="oldest">Oldest</option>
+</select>
+    <input type="submit" name="sort" value="Sort">
+</form><br>
+
+<form action="" method="GET">
+    <input type="text" name="data_search">
+    <input type="submit" name="search" value="Search">
+</form>
+
 <table style="width:100%">
 
   <tr>
@@ -25,7 +42,7 @@
        {% for loan in object_list %}
   <tr>
 
-    <td>{{ loan.client }}</td>
+    <td><a href="/client_details/{{ loan.client.id }}">{{ loan.client }}</a> </td>
     <td>{{ loan.bank }}</td>
     <td>{{ loan.loan_amount_gross }}</td>
     <td>{{ loan.loan_amount_net }}</td>
