--- a/loan_helper/templates/broker_details.html
+++ b/loan_helper/templates/broker_details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Clients List</title>
+    <title>Broker Details</title>
 </head>
 <body>
 <a href="/"> <input type="button" value="Index"></a>
@@ -10,24 +10,26 @@
 <a href="/all_banks/"> <input type="button" value="Banks List"></a>
 <a href="/all_brokers/"> <input type="button" value="Brokers List"></a>
 <a href="/all_loans/"> <input type="button" value="Loans List"></a>
-<h1>Clients</h1>
 
-<form action="" method="GET">
-<select name="order">
-    <option name="">-----</option>
-    <option name="first_name">First Name</option>
-    <option name="last_name">Last Name</option>
-    <option name="date_created">Date Created</option>
-    <option name="status">Status</option>
-</select>
-    <input type="submit" name="sort" value="Sort">
-</form><br>
+<h1>Broker details: {{ broker.name }}</h1>
 
-<form action="" method="GET">
-    <input type="text" name="data_search">
-    <input type="submit" name="search" value="Search">
-</form>
+<table style="width:100%">
 
+  <tr>
+    <th>Name</th>
+    <th>Phone Number</th>
+    <th>Email</th>
+    <th>Actions</th>
+
+  </tr>
+  <tr>
+
+    <td>{{ broker.name }}</td>
+    <td>{{ broker.phone_number }}</td>
+    <td>{{ broker.email }}</td>
+    <td><a href="/broker_update/{{ broker.id }}"> <input type="button" value="Update"></a></td>
+  </tr>
+</table><br><br>
 
      <table style="width:100%">
 
@@ -45,7 +47,7 @@
     <th>Date created</th>
     <th>Details</th>
   </tr>
-       {% for client in object_list %}
+       {% for client in clients %}
   <tr>
 
     <td>{{ client.first_name }}</td>
@@ -74,6 +76,41 @@
 {% endfor %}
 </table><br><br>
 
+<table style="width:100%">
+
+  <tr>
+    <th>Client</th>
+    <th>Bank</th>
+    <th>Loan Amount Gross [zł]</th>
+    <th>Loan Amount Net [zł]</th>
+    <th>Bank Charge [%]</th>
+    <th>Interest rate [%]</th>
+    <th>Bank insurance [zł]</th>
+    <th>Repayment term [months]</th>
+    <th>Instalment amount [zł]</th>
+    <th>Date</th>
+
+
+  </tr>
+       {% for loan in loans %}
+  <tr>
+
+    <td><a href="/client_details/{{ loan.client.id }}">{{ loan.client }}</a> </td>
+    <td>{{ loan.bank }}</td>
+    <td>{{ loan.loan_amount_gross }}</td>
+    <td>{{ loan.loan_amount_net }}</td>
+    <td>{{ loan.bank_charge }}</td>
+    <td>{{ loan.interest_rate }}</td>
+    <td>{{ loan.bank_insurance }}</td>
+    <td>{{ loan.repayment_term }}</td>
+    <td>{{ loan.instalment_amount }}</td>
+    <td>{{ loan.date_created }}</td>
+
+  </tr>
+     {% empty %}
+    <li>No loans yet.</li>
+{% endfor %}
+</table><br><br>
 
 
 </body>
