--- a/loan_helper/templates/client_details.html
+++ b/loan_helper/templates/client_details.html
@@ -5,9 +5,14 @@
     <title>Client Details</title>
 </head>
 <body>
+<a href="/"> <input type="button" value="Index"></a>
+<a href="/all_clients/"> <input type="button" value="Clients List"></a>
+<a href="/all_banks/"> <input type="button" value="Banks List"></a>
+<a href="/all_brokers/"> <input type="button" value="Brokers List"></a>
+<a href="/all_loans/"> <input type="button" value="Loans List"></a>
 
 <h1>Client details: {{ client.first_name }} {{ client.last_name }}</h1>
-<h2></h2>
+
 
  <table style="width:100%">
   <tr>
