--- a/loan_helper/templates/loan_helper/bank_list.html
+++ b/loan_helper/templates/loan_helper/bank_list.html
@@ -5,6 +5,11 @@
     <title>Banks List</title>
 </head>
 <body>
+<a href="/"> <input type="button" value="Index"></a>
+<a href="/all_clients/"> <input type="button" value="Clients List"></a>
+<a href="/all_banks/"> <input type="button" value="Banks List"></a>
+<a href="/all_brokers/"> <input type="button" value="Brokers List"></a>
+<a href="/all_loans/"> <input type="button" value="Loans List"></a>
 <h1>Brokers</h1>
 <table style="width:100%">
 
