--- a/loan_helper/templates/loan_helper/broker_list.html
+++ b/loan_helper/templates/loan_helper/broker_list.html
@@ -5,6 +5,11 @@
     <title>Broker List</title>
 </head>
 <body>
+<a href="/"> <input type="button" value="Index"></a>
+<a href="/all_clients/"> <input type="button" value="Clients List"></a>
+<a href="/all_banks/"> <input type="button" value="Banks List"></a>
+<a href="/all_brokers/"> <input type="button" value="Brokers List"></a>
+<a href="/all_loans/"> <input type="button" value="Loans List"></a>
 <h1>Brokers</h1>
 <table style="width:100%">
 
@@ -20,7 +25,7 @@
 
     <td>{{ broker.name }}</td>
     <td>{{ broker.phone_number }}</td>
-    <td>{{ cbroker.email }}</td>
+    <td>{{ broker.email }}</td>
     <td><a href="/broker_details/{{ broker.id }}"> <input type="button" value="Click"></a></td>
   </tr>
      {% empty %}
