loan update added

--- a/loan_helper/templates/loan_helper/successfulloan_list.html
+++ b/loan_helper/templates/loan_helper/successfulloan_list.html
@@ -56,7 +56,7 @@
     <td>{{ loan.instalment_amount }}</td>
     <td>{{ loan.date_created }}</td>
     <td>
-        <a href="loan_update/{{ loan.id }}"> <input type="button" value="Update"></a>
+        <a href="/loan_update/{{ loan.id }}"> <input type="button" value="Update"></a>
     </td>
 
   </tr>
