--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -3,18 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Hello there. Choose your action.</h1>
-    <ul>
-        <li><a href="/add_client/">Add Client</a> </li>
-        <li><a href="/add_broker/">Add Broker</a> </li>
-        <li><a href="/add_bank/">Add Bank</a> </li>
-        <li><a href="/add_loan/">Add Successful Loan</a> </li>
-        <li><a href="/all_clients/">Show Clients List</a> </li>
-        <li><a href="/all_brokers/">Show Broker List</a> </li>
-        <li><a href="/all_banks/">Show Bank List</a> </li>
-        <li><a href="/all_loans/">Show Successful Loan list</a> </li>
-    </ul>
+<body class="bg-light">
+
+    <h1 class="text-md-center bg-dark text-light" >LOAN HELPER</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card text-white bg-light mb-3" style="margin: 20px; width: 15rem; display: inline-block">
+                    <div>
+                        <a href="/add_client/" class="list-group-item list-group-item-action" style="">Add Client</a>
+                        <a href="/add_broker/" class="list-group-item list-group-item-action">Add Broker</a>
+                        <a href="/add_bank/" class="list-group-item list-group-item-action">Add Bank</a>
+                        <a href="/add_loan/" class="list-group-item list-group-item-action">Add Successful Loan</a>
+                        <a href="/all_clients/" class="list-group-item list-group-item-action">Show Clients List</a>
+                        <a href="/all_brokers/" class="list-group-item list-group-item-action">Show Broker List</a>
+                        <a href="/all_banks/" class="list-group-item list-group-item-action">Show Bank List</a>
+                        <a href="/all_loans/" class="list-group-item list-group-item-action">Show Successful Loan list</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm">
+                <div class="text-dark text-md-center" style="display: inline-block">
+                <h2>About app</h2>
+                    <p class="text-justify">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie odio ut neque maximus,
+                        id mattis urna aliquet. Sed in lacus sed ipsum semper varius. Sed porttitor est eget scelerisque
+                        laoreet. Etiam at facilisis mi. Ut sit amet molestie odio, vitae scelerisque ipsum. Curabitur egestas
+                        feugiat lectus. Donec quis gravida odio. In hac habitasse platea dictumst. Proin risus metus, convallis
+                        nec neque sodales, congue semper orci. Donec congue nisl vel sem egestas, non dignissim elit pretium.
+                        Ut bibendum odio ut imperdiet eleifend. Etiam porta sem et posuere consectetur. In eu sem vitae neque
+                        ornare pretium. Nam posuere metus vitae porttitor facilisis. Duis leo mauris, interdum et leo id,
+                        fringilla faucibus lectus.<br><br>
+
+                        Integer malesuada eros sit amet commodo condimentum. Fusce faucibus commodo ante. In consequat in justo
+                        vel commodo. Quisque faucibus augue vitae pellentesque fermentum. Pellentesque pellentesque velit nec
+                        tincidunt ullamcorper. Quisque congue vulputate pulvinar. Vestibulum ut nunc id sem placerat cursus.
+                        Proin viverra turpis eget purus rhoncus, consectetur sollicitudin sapien volutpat. Morbi mattis, sapien
+                        eu dictum vehicula, augue augue convallis velit, et gravida erat dolor in lectus.<br><br>
+
+                        Ut ac lobortis urna. Nulla eu accumsan quam. Praesent augue nisl, bibendum a libero blandit,
+                        scelerisque porta nisi. Aenean finibus pellentesque ex, sit amet vulputate arcu efficitur sit amet.
+                        Cras eget ullamcorper enim. Phasellus accumsan urna in turpis vulputate, ut maximus orci molestie.
+                        Proin hendrerit eget mi vitae pretium. Fusce varius interdum tristique. Aliquam viverra orci nunc, in
+                        commodo magna cursus id.<br><br>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
