--- a/loan_helper/templates/client_details.html
+++ b/loan_helper/templates/client_details.html
@@ -124,7 +124,8 @@
         <td>
             <form method="post">
                 {% csrf_token %}
-                <input type="submit" value="Edit comment" name="delete_comment"><br>
+                <input type="submit" value="Delete comment" name="delete_comment"><br>
+                <input type="hidden" name="comment_id" value={{ info.id }}>
             </form>
         </td>
     </tr>
