--- a/loan_helper/templates/loan_helper/broker_form.html
+++ b/loan_helper/templates/loan_helper/broker_form.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base_form.html" %}
+    {% block title %}
     <title>Add Broker</title>
-</head>
-<body>
+    {% endblock %}
+{% block content %}
+
 <h1>Add Broker</h1>
 <form method="post">{% csrf_token %}
     {{ form.as_ul }}
     <input type="submit" value="Add">
 </form>
-</body>
-</html>
+{% endblock %}
