--- a/loan_helper/templates/loan_helper/successfulloan_form.html
+++ b/loan_helper/templates/loan_helper/successfulloan_form.html
@@ -1,11 +1,12 @@
 {% extends "base_form.html" %}
     {% block title %}
-    <title>Add Broker</title>
+    <title>Add Loan</title>
     {% endblock %}
+
 {% block content %}
 <h1>Add Loan</h1>
 <form method="post">{% csrf_token %}
-    {{ form.as_ul }}
+    {{ form.as_p }}
     <input type="submit" value="Add">
 </form>
 {% endblock %}
