--- a/loan_helper/templates/loan_helper/successfulloan_list.html
+++ b/loan_helper/templates/loan_helper/successfulloan_list.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Loans list</title>
-</head>
-<body>
-<a href="/"> <input type="button" value="Index"></a>
-<a href="/all_clients/"> <input type="button" value="Clients List"></a>
-<a href="/all_banks/"> <input type="button" value="Banks List"></a>
-<a href="/all_brokers/"> <input type="button" value="Brokers List"></a>
-<a href="/all_loans/"> <input type="button" value="Loans List"></a>
-<h1>Successful Loans</h1>
+{% extends "base_list.html" %}
+    {% block title %}
+    <title>Loan list</title>
+    {% endblock %}
+{% block content %}
+<h1>Loan List</h1>
 
 <form action="" method="GET">
 <select name="order">
@@ -64,5 +57,4 @@
     <li>No loans yet.</li>
 {% endfor %}
 </table><br><br>
-</body>
-</html>
+{% endblock %}
