minor changes in base htmls

--- a/loan_helper/templates/base_list.html
+++ b/loan_helper/templates/base_list.html
@@ -9,7 +9,8 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body class="bg-light">
-    <h1 class="text-md-center bg-dark text-light" >LOAN HELPER</h1>
+    <h1 class="text-md-center bg-dark text-light">
+        <a href="/" style="text-decoration: None; color: lightgray"> LOAN HELPER</a></h1>
         <div style="display: block; text-align: center">
                 <div class="card text-white bg-light mb-3" style="margin: 20px; width: 15rem; display: inline-block">
                         <a href="/add_client/" class="list-group-item list-group-item-action" style="">Add Client</a>
