--- a/loan_helper/templates/base_form.html
+++ b/loan_helper/templates/base_form.html
@@ -9,7 +9,8 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body class="bg-light">
-    <h1 class="text-md-center bg-dark text-light" >LOAN HELPER</h1>
+    <h1 class="text-md-center bg-dark text-light">
+        <a href="/" style="text-decoration: None; color: lightgray"> LOAN HELPER</a></h1>
         <div class="container">
         <div class="row">
             <div class="col-sm">
