--- a/loan_helper/templates/broker_details.html
+++ b/loan_helper/templates/broker_details.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base_list.html" %}
+    {% block title %}
     <title>Broker Details</title>
-</head>
-<body>
-<a href="/"> <input type="button" value="Index"></a>
-<a href="/all_clients/"> <input type="button" value="Clients List"></a>
-<a href="/all_banks/"> <input type="button" value="Banks List"></a>
-<a href="/all_brokers/"> <input type="button" value="Brokers List"></a>
-<a href="/all_loans/"> <input type="button" value="Loans List"></a>
+    {% endblock %}
+{% block content %}
 
 <h1>Broker details: {{ broker.name }}</h1>
 
@@ -111,7 +104,4 @@
     <li>No loans yet.</li>
 {% endfor %}
 </table><br><br>
-
-
-</body>
-</html>
+{% endblock %}
