--- a/loan_helper/templates/income.html
+++ b/loan_helper/templates/income.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Income</title>
-</head>
-<body>
+{% extends "base_form.html" %}
+    {% block title %}
+    <title>Add Income</title>
+    {% endblock %}
+{% block content %}
 <h1>Change income</h1>
 <h2>Client: {{ client.first_name }} {{ client.last_name }}</h2>
 <p>Occupation:</p>
@@ -34,5 +32,4 @@
     Monthly income: <input name="income" type="number"><br>
     <input type="submit" value="Add" name="add">
 </form>
-</body>
-</html>
+{% endblock %}
