bootstrap added to forms

--- a/loan_helper/templates/loan_helper/broker_form.html
+++ b/loan_helper/templates/loan_helper/broker_form.html
@@ -1,12 +1,14 @@
 {% extends "base_form.html" %}
     {% block title %}
-    <title>Add Broker</title>
+    <title>Broker</title>
     {% endblock %}
 {% block content %}
 
-<h1>Add Broker</h1>
-<form method="post">{% csrf_token %}
+<h2>Broker details</h2>
+<hr>
+    <form method="post" class="form-group" style="display: inline-block; text-align: justify; width: 200px">
+        {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Add">
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
