--- a/loan_helper/templates/loan_helper/successfulloan_form.html
+++ b/loan_helper/templates/loan_helper/successfulloan_form.html
@@ -1,12 +1,14 @@
 {% extends "base_form.html" %}
     {% block title %}
-    <title>Add Loan</title>
+    <title>Loan</title>
     {% endblock %}
 
 {% block content %}
-<h1>Add Loan</h1>
-<form method="post">{% csrf_token %}
+<h2>Loan details</h2>
+<hr>
+    <form method="post" class="form-group" style="display: inline-block; text-align: justify; width: 150px">
+        {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Add">
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
