--- a/loan_helper/templates/loan_helper/bank_form.html
+++ b/loan_helper/templates/loan_helper/bank_form.html
@@ -1,12 +1,14 @@
 {% extends "base_form.html" %}
     {% block title %}
-    <title>Add Bank</title>
+    <title>Bank</title>
     {% endblock %}
 {% block content %}
 
-<h1>Add Bank</h1>
-<form method="post">{% csrf_token %}
+<h2>Bank details</h2>
+<hr>
+    <form method="post" class="form-group" style="display: inline-block; text-align: justify; width: 200px">
+        {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Add">
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
