lists updated of bootstrap

--- a/loan_helper/templates/loan_helper/bank_list.html
+++ b/loan_helper/templates/loan_helper/bank_list.html
@@ -4,8 +4,9 @@
     {% endblock %}
 {% block content %}
 
-<h1>Bank List</h1>
-<table style="width:100%">
+<h2 style="text-align: center">Bank List</h2>
+    <hr>
+<table class="table">
 
   <tr>
     <th>Name</th>
