--- a/loan_helper/templates/loan_helper/bank_list.html
+++ b/loan_helper/templates/loan_helper/bank_list.html
@@ -3,10 +3,10 @@
     <title>Bank list</title>
     {% endblock %}
 {% block content %}
-
+<hr>
 <h2 style="text-align: center">Bank List</h2>
     <hr>
-<table class="table">
+<table class="table" style="background: rgba(230,233,235,0.62)">
 
   <tr>
     <th>Name</th>
@@ -22,5 +22,5 @@
      {% empty %}
     <li>No banks yet.</li>
 {% endfor %}
-</table><br><br>
+</table>
 {% endblock %}
