--- a/loan_helper/templates/loan_helper/broker_list.html
+++ b/loan_helper/templates/loan_helper/broker_list.html
@@ -3,10 +3,10 @@
     <title>Broker list</title>
     {% endblock %}
 {% block content %}
-
+<hr>
 <h2 style="text-align: center">Broker List</h2>
     <hr>
-<table class="table">
+<table class="table" style="background: rgba(230,233,235,0.62)">
 
   <tr>
     <th>Name</th>
