--- a/loan_helper/templates/loan_helper/client_list.html
+++ b/loan_helper/templates/loan_helper/client_list.html
@@ -3,6 +3,7 @@
     <title>Client list</title>
     {% endblock %}
 {% block content %}
+    <hr>
 <h2 style="text-align: center">Client List</h2>
     <hr>
 
@@ -24,7 +25,7 @@
     </form>
 </div>
 
-     <table class="table">
+     <table class="table" style="background: rgba(230,233,235,0.62)">
 
           <tr>
             <th>First Name</th>
