--- a/loan_helper/templates/client_details.html
+++ b/loan_helper/templates/client_details.html
@@ -8,7 +8,7 @@
     <hr>
 
  <table class="table" style="background: rgba(230,233,235,0.62)">
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>First Name</th>
     <th>Last Name</th>
     <th>Phone Number</th>
@@ -69,7 +69,7 @@
 <h2 style="text-align: center">Current Loans (only given by our company)</h2>
 <table class="table" style="background: rgba(230,233,235,0.62)">
 
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>Bank</th>
     <th>Loan Amount Gross [zł]</th>
     <th>Loan Amount Net [zł]</th>
@@ -105,7 +105,7 @@
 
 
  <table class="table" style="background: rgba(230,233,235,0.62)" >
- <tr>
+ <tr style="background: rgba(220,223,225,0.62)">
      <th>Comment</th>
      <th>Date</th>
      <th>Actions</th>
