--- a/loan_helper/templates/loan_helper/successfulloan_list.html
+++ b/loan_helper/templates/loan_helper/successfulloan_list.html
@@ -21,7 +21,7 @@
 </div>
 <table class="table" style="background: rgba(230,233,235,0.62)">
 
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>Client</th>
     <th>Broker</th>
     <th>Bank</th>
