--- a/loan_helper/templates/broker_details.html
+++ b/loan_helper/templates/broker_details.html
@@ -8,7 +8,7 @@
 <hr>
 <table class="table" style="background: rgba(230,233,235,0.62)">
 
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>Name</th>
     <th>Phone Number</th>
     <th>Email</th>
@@ -28,7 +28,7 @@
 <hr>
      <table class="table" style="background: rgba(230,233,235,0.62)">
 
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>First Name</th>
     <th>Last Name</th>
     <th>Phone Number</th>
@@ -75,7 +75,7 @@
 <hr>
 <table class="table" style="background: rgba(230,233,235,0.62)">
 
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>Client</th>
     <th>Bank</th>
     <th>Loan Amount Gross [zł]</th>
