--- a/loan_helper/templates/income.html
+++ b/loan_helper/templates/income.html
@@ -6,7 +6,7 @@
 
 <h2>Change income</h2>
     <hr>
-<h3>Client: {{ client.first_name }} {{ client.last_name }}</h3>
+<h3>Client: <a href="/client_details/{{ client.id }}/"> {{ client.first_name }} {{ client.last_name }} </a></h3>
     <hr>
 <p>Occupation:</p>
 <ul>
