--- a/loan_helper/templates/loan_helper/broker_list.html
+++ b/loan_helper/templates/loan_helper/broker_list.html
@@ -8,7 +8,7 @@
     <hr>
 <table class="table" style="background: rgba(230,233,235,0.62)">
 
-  <tr>
+  <tr style="background: rgba(220,223,225,0.62)">
     <th>Name</th>
     <th>Phone Number</th>
     <th>Email</th>
