--- a/loan_helper/templates/loan_helper/client_list.html
+++ b/loan_helper/templates/loan_helper/client_list.html
@@ -24,10 +24,10 @@
         <input type="submit" name="search" value="Search">
     </form>
 </div>
-
+<hr>
      <table class="table" style="background: rgba(230,233,235,0.62)">
 
-          <tr>
+          <tr style="background: rgba(220,223,225,0.62)">
             <th>First Name</th>
             <th>Last Name</th>
             <th>Phone Number</th>
