login view added, index minor changes

--- a/loan_helper/templates/index.html
+++ b/loan_helper/templates/index.html
@@ -8,14 +8,18 @@
 </head>
 <body class="bg-light">
     <div class="text-md-center bg-dark text-light">
-    <h1 style="display: flex; justify-content: center">LOAN HELPER</h1>
-    <p style="display: flex; justify-content: right">Hello, {{ user }}</p>
+        <h1 style="display: flex; justify-content: center">LOAN HELPER</h1>
+        <p style="display: flex; justify-content: right; padding: 5px">Hello, {{ user }}</p>
     </div>
     <div style="display: flex; justify-content: right">
-    <a href="/logout/" class="list-group-item list-group-item-action"
-       style="display: inline-block; text-align: center; width: 100px">
-        Logout
-    </a>
+        <a href="/login/" class="list-group-item list-group-item-action"
+           style="display: inline-block; text-align: center; width: 100px">
+            Login
+        </a>
+        <a href="/logout/" class="list-group-item list-group-item-action"
+           style="display: inline-block; text-align: center; width: 100px">
+            Logout
+        </a>
     </div>
     <div class="container">
         <div class="row">
